[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulkan-forge"
version = "0.1.0"
authors = [
    {name = "VulkanForge Team"},
]
description = "Multi-GPU renderer with automatic CPU fallback"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
]
vulkan = [
    "vulkan>=1.2.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/vulkan-forge"
"Bug Tracker" = "https://github.com/yourusername/vulkan-forge/issues"

[tool.setuptools]
packages = ["vulkan_forge"]